# robot_pet_bottle

./: PET_ardino  README.md  aduino_motor  odom  topic  개인 프로젝트 하드웨어.pptx  아두이노_코드
robot_pet_bottle/: README.md  requirements-rpi-infer.txt  requirements-rpi.txt  requirements.txt  run_webcam.sh
robot_pet_bottle/ros2_sllidar_reference/: README.md
robot_pet_bottle/ros2_sllidar_reference/slampibot_robot/sdk/: README.md
robot_pet_bottle/ros2_sllidar_reference/slampibot_robot/src/: sllidar_node.cpp
robot_pet_bottle/ros2_sllidar_with_sdk/: README.md
robot_pet_bottle/ros2_sllidar_with_sdk/slampibot_robot/: CMakeLists.txt  package.xml
robot_pet_bottle/ros2_sllidar_with_sdk/slampibot_robot/launch/: slam_robot.launch.py
robot_pet_bottle/ros2_sllidar_with_sdk/slampibot_robot/sdk/: README.md
robot_pet_bottle/scripts/: infer_cnn_mixed.py  train_cnn_mixed.py  webcam_infer_server.py
